# I-Love-Grafana-Labs

./: .gitignore  Cargo.toml  README.md
example-auth-api/: Cargo.toml
example-bank-api/: Cargo.toml
example-jwt-auth-service/: Cargo.toml
example-umbrella-chart/: Chart.yaml  values.yaml
example-umbrella-chart/charts/auth-api/: values.yaml
example-umbrella-chart/charts/auth-api/templates/: deployment.yaml
example-umbrella-chart/charts/bank-api/: Chart.yaml  values.yaml
example-umbrella-chart/charts/bank-spa/: values.yaml
example-umbrella-chart/charts/core/charts/auth-api/: values.yaml
example-umbrella-chart/charts/core/charts/auth-api/templates/: deployment.yaml  service.yaml
example-umbrella-chart/charts/core/charts/bank-api/: values.yaml
example-umbrella-chart/charts/core/charts/bank-api/templates/: deployment.yaml  service.yaml
example-umbrella-chart/charts/core/charts/bank-spa/: Chart.yaml  values.yaml
example-umbrella-chart/charts/core/charts/bank-spa/templates/: deployment.yaml  service.yaml
example-umbrella-chart/charts/core/charts/envoy/templates/: configmap.yaml  tls-secret.yaml
example-umbrella-chart/charts/core/charts/postgre/: values.yaml
example-umbrella-chart/charts/core/charts/postgre/files/init-scripts-bank/: init.sql
example-umbrella-chart/charts/core/charts/postgre/templates/: _helpers.tpl  init-script.yaml  postgre.yaml
example-umbrella-chart/charts/envoy/: Chart.yaml  values.yaml
example-umbrella-chart/charts/envoy/files/: envoy.yaml
example-umbrella-chart/charts/envoy/templates/: deployment.yaml  service.yaml
example-umbrella-chart/charts/loki/: values.yaml
example-umbrella-chart/charts/loki/templates/: _helpers.tpl  lokiconf.yaml
example-umbrella-chart/charts/observability/charts/grafana/: values.yaml
example-umbrella-chart/charts/observability/charts/grafana/templates/: configmap-grafana-config.yaml  dashboard-provider-configmap.yaml  dashboard_config.yaml  deployment.yaml  service.yaml
example-umbrella-chart/charts/observability/charts/loki/: values.yaml
example-umbrella-chart/charts/observability/charts/loki/templates/: _helpers.tpl  lokiconf.yaml  service.yaml  statefulset.yaml
example-umbrella-chart/charts/observability/charts/prometheus/: values.yaml
example-umbrella-chart/charts/observability/charts/prometheus/files/: prometheus.yml
example-umbrella-chart/charts/observability/charts/prometheus/templates/: deployment.yaml
example-umbrella-chart/charts/postgre/: values.yaml
example-umbrella-chart/charts/postgre/files/init-scripts-auth/: init.sql
example-umbrella-chart/charts/postgre/files/init-scripts-ledger/: init.sql
example-umbrella-chart/charts/postgre/templates/: _helpers.tpl  init-script.yaml
example-umbrella-chart/charts/prometheus/templates/: configmap.yaml
example-umbrella-chart/dashboards/: example-minikube-dashboard.json
example-umbrella-chart/templates/: minikube-dashboard.yaml  static-pyro-service.yaml
jwt-util/: Cargo.toml
jwt-util/src/: lib.rs
rust/auth-api/: Cargo.toml  Dockerfile
rust/auth-api/src/: main.rs
rust/bank-api/: Cargo.toml  Dockerfile
rust/bank-api/src/: balance.rs  contact.rs  error.rs  filter.rs  main.rs  pending.rs  transaction.rs
rust/bank-api/src/contact/: contact.rs  imp.rs  mod.rs  post.rs
rust/bank-api/src/transaction/: action.rs  imp.rs  mod.rs  post.rs  status.rs  transaction.rs
rust/bank-spa/: Cargo.toml  Dockerfile
rust/bank-spa/src/: main.rs
rust/jwt-proxy-auth/: Cargo.toml
rust/jwt-util/: Cargo.toml
rust/jwt-util/src/: lib.rs
rust/tracking-util/: Cargo.toml
rust/tracking-util/src/: lib.rs
