[package]
name = "jwt-util"
version = "0.1.0"
edition = "2024"

[dependencies]
jsonwebtoken = "9"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", default-features = false, features = ["clock"] }

[features]
encode = []
sync-decode  = []
async-decode = []