[package]
name = "auth-api"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json  = "1.0"
anyhow = "1"
sqlx = { version = "0.8", default-features = false, features = ["postgres","runtime-tokio-rustls","macros","chrono", "uuid", "json"] }
thiserror = "2"
argon2 = "0.5"
uuid = { version = "1", features = ["v4"] }


jwt-util = {path = "../jwt-util", features = ["encode"]}