[package]
name = "bank-api"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8"
axum-extra  = { version = "0.10", features = ["typed-header"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json  = "1.0"
anyhow = "1"
sqlx = { version = "0.8", default-features = false, features = ["postgres","runtime-tokio-rustls","macros","chrono", "uuid", "json"] }
thiserror = "2"
chrono = { version = "0.4", features = ["serde"] }

jwt-util = {path = "../jwt-util", features = ["decode"]}