[package]
name = "bank-api"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8"
axum-extra  = { version = "0.10", features = ["typed-header"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json  = "1.0"
anyhow = "1"
sqlx = { version = "0.8", default-features = false, features = ["postgres","runtime-tokio-rustls","macros","chrono", "uuid", "json"] }
thiserror = "2"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }


jwt-util = { git = "https://github.com/Roman-Zanotelli/I-Love-Grafana-Labs.git", subdir = "rust/jwt-util", branch = "main", features = ["decode"] }

metrics = "0.24"
metrics-exporter-prometheus = "0.17"
tower-http = { version = "0.6", features = ["trace"] }