[package]
name = "bank-spa"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.7", default-features = false, features = ["http1", "tokio"] }
tokio = { version = "1.38.0", features = ["macros", "rt-multi-thread"]}
tower-http = { version = "0.5", default-features = false, features = [
    "fs",             # For ServeDir and ServeFile
    "set-header",     # For SetResponseHeaderLayer
    "compression-gzip" # For CompressionLayer (gzip only)
] }