[package]
name = "bank-spa"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.7", default-features = false, features = ["http1", "tokio"] }
tokio = { version = "1.38.0", features = ["macros", "rt-multi-thread"]}
tower-http = { version = "0.6", default-features = false, features = [
    "fs",
    "set-header",
    "compression-gzip",
    "trace"
] }
anyhow = "1"




metrics = "0.24"
metrics-exporter-prometheus = "0.17"

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }

tracking-util = { git = "https://github.com/Roman-Zanotelli/I-Love-Grafana-Labs.git", subdir = "rust/tracking-util", branch = "main"}
