[package]
name = "tracking-util"
version = "0.1.0"
edition = "2024"

[dependencies]
tracing = "0.1"
tracing-subscriber = {version = "0.3", features = ["env-filter", "fmt", "json"]}

opentelemetry = "0.30" 
opentelemetry_sdk = "0.30"
opentelemetry-otlp = { version = "0.30", features = ["grpc-tonic"] }
tracing-opentelemetry = "0.31"

pyroscope = "0.5"
pyroscope_pprofrs = "0.2"

metrics = "0.24"
metrics-exporter-prometheus = "0.17"

anyhow = "1"